feat: Finish Jupyter Notebook

--- a/data_pipelines/06-sagemaker-pipeline-for-documents-processing.ipynb
+++ b/data_pipelines/06-sagemaker-pipeline-for-documents-processing.ipynb
@@ -238,7 +238,7 @@
     "embeddings_and_index_job = ScriptProcessor(\n",
     "    image_uri=script_processor_container_uri,\n",
     "    role=get_execution_role(),\n",
-    "    instance_type=\"ml.t3.large\",\n",
+    "    instance_type=\"ml.t3.medium\",\n",
     "    instance_count=1,\n",
     "    base_job_name=\"EmbeddingCreationAndIndexing\",\n",
     "    env={\"SQL_DB_SECRET_ID\": db_secret_arn, \"AWS_DEFAULT_REGION\": region},\n",
@@ -292,7 +292,7 @@
     "entities_to_sql = ScriptProcessor(\n",
     "    image_uri=script_processor_container_uri,\n",
     "    role=get_execution_role(),\n",
-    "    instance_type=\"ml.t3.large\",\n",
+    "    instance_type=\"ml.t3.medium\",\n",
     "    instance_count=1,\n",
     "    base_job_name=\"LoadEntitiesToSQLTable\",\n",
     "    env={\"SQL_DB_SECRET_ID\": db_secret_arn, \"AWS_DEFAULT_REGION\": region},\n",
