--- a/data_pipelines/01-validate-sagemaker-jobs-connection-to-postgreSQL.ipynb
+++ b/data_pipelines/01-validate-sagemaker-jobs-connection-to-postgreSQL.ipynb
@@ -215,7 +215,7 @@
     "script_processor = ScriptProcessor(\n",
     "    image_uri=script_processor_container_uri,\n",
     "    role=get_execution_role(),\n",
-    "    instance_type=\"ml.t3.large\",\n",
+    "    instance_type=\"ml.t3.medium\",\n",
     "    instance_count=1,\n",
     "    base_job_name=\"check-connectivity\",\n",
     "    env={\"SQL_DB_SECRET_ID\": db_secret_arn, \"AWS_DEFAULT_REGION\": region},\n",
