--- a/data_pipelines/04-create-and-load-embeddings-into-aurora-postgreSQL.ipynb
+++ b/data_pipelines/04-create-and-load-embeddings-into-aurora-postgreSQL.ipynb
@@ -268,7 +268,7 @@
     "    token_split_chunk_size = 512\n",
     "    token_chunk_overlap = 64\n",
     "    # Define an embedding model to generate embeddings\n",
-    "    embedding_model_id = \"amazon.titan-embed-text-v1\"\n",
+    "    embedding_model_id = \"amazon.titan-embed-text-v2:0\"\n",
     "    COLLECTION_NAME = 'agentic_assistant_vector_store'\n",
     "    # make this an argument.\n",
     "    pre_delete_collection = True\n",
@@ -383,7 +383,7 @@
     "script_processor = ScriptProcessor(\n",
     "    image_uri=script_processor_container_uri,\n",
     "    role=get_execution_role(),\n",
-    "    instance_type=\"ml.t3.large\",\n",
+    "    instance_type=\"ml.t3.medium\",\n",
     "    instance_count=1,\n",
     "    base_job_name=\"populate-db\",\n",
     "    env={\"SQL_DB_SECRET_ID\": db_secret_arn, \"AWS_DEFAULT_REGION\": region},\n",
