--- a/data_pipelines/99-populate-rag-db.ipynb
+++ b/data_pipelines/99-populate-rag-db.ipynb
@@ -170,7 +170,7 @@
     "script_processor = ScriptProcessor(\n",
     "    image_uri=script_processor_container_uri,\n",
     "    role=get_execution_role(),\n",
-    "    instance_type=\"ml.t3.large\",\n",
+    "    instance_type=\"ml.t3.medium\",\n",
     "    instance_count=1,\n",
     "    base_job_name=\"load-rag-data\",\n",
     "    env={\"SQL_DB_SECRET_ID\": db_secret_arn, \"AWS_DEFAULT_REGION\": region},\n",
